--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,4 +76,28 @@
         <item name="android:textSize">32sp</item>
     </style>
 
+    <style name="subtle_separator">
+        <item name="android:height">1dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@android:color/black</item>
+    </style>
+    
+    <style name="title_bar">
+        <item name="android:layout_height">56dp</item>
+        <item name="android:elevation">4dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:paddingStart">72dp</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="day_plan_time">
+        <item name="android:layout_width">64dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="paddingStart">4dp</item>
+    </style>
+
+    <style name="day_plan_content">
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
