Interne Datenbank funktionert, DayPlan Activity zeigt die richtigen Termine für den aktuellen Tag an und man kann neue Termine erstellen. Die Funktion des neu erstellen der Termine in der DayPlan Activity ist nur zum testzeck, da es sinnlos ist Termine für die Zukunft einzutragen, obwohl nur die aktuellen Termine von diesem Tag sichtbar sind. Allerdings lässt sich diese Funktion der Termin Anlegung auch in eine andere Activity später verschieben. Die Termine in DayPlan werden mit einem RecyclerView dargestellt. Diese Technik lässt sich später ebenfalls auf andere Activities wie dem Wochen Plan übertragen. Es gibt verschieden kleine Verbesserungen in anderen Files, die allerdings nichts wesentlich verändert haben. Auch habe ich meinen Code so verändert dass er besser lesbar ist und habe teilweise Kommentare hinzugefügt. Das Design ist nur zu Übersichtlichkeit und bleibt nicht so.

--- a/app/src/main/res/layout/activity_day_plan.xml
+++ b/app/src/main/res/layout/activity_day_plan.xml
@@ -22,17 +22,80 @@
                 android:id="@+id/day_plan_RV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="8dp"
                 />
 
         </RelativeLayout>
         <TextView
-            android:layout_width="match_parent"
             android:id="@+id/title_day_plan_TV"
-            android:elevation="4dp"
             style="@style/title_bar"
             >
         </TextView>
+
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/add_plans_RL"
+    android:layout_gravity="center"
+    android:layout_margin="16dp"
+    android:background="@android:color/white"
+    android:alpha="0.8"
+    android:visibility="invisible"
+    >
+
+        <DatePicker android:id="@+id/datePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:layout_centerInParent="true"
+            android:datePickerMode="spinner"
+            android:calendarViewShown="false"
+            />
+
+        <TimePicker
+            android:id="@+id/time_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:timePickerMode="spinner"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/get_activity_ET"
+            android:layout_centerInParent="true"
+            android:hint="Aktivität"
+            android:visibility="invisible"
+            >
+
+        </EditText>
+    </RelativeLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="30dp"
+            android:text="wählen"
+            android:visibility="invisible"
+            android:id="@+id/pick_input_B"
+            >
+
+        </Button>
+
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_plan_in_day_plan_B"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="6dp"
+            >
+
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 
 </FrameLayout>
