--- a/app/src/main/res/layout/recycler_view_day_plan_row.xml
+++ b/app/src/main/res/layout/recycler_view_day_plan_row.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/recycler_view_element_bottom_border"
     android:minHeight="48dp"
+    android:background="@android:color/white"
 
     >
 
@@ -20,6 +20,8 @@
     <TextView
         android:id="@+id/day_plan_activity_row_TV"
         android:layout_width="match_parent"
-        style="@style/day_plan_content"/>
+        style="@style/day_plan_content"
+        android:background="@drawable/recycler_view_element_bottom_border"
+        />
 
 </LinearLayout>
